@@ -29,23 +29,18 @@
  */
 package org.hisp.dhis.tracker.imports.programrule.engine;
 
-import static org.hisp.dhis.programrule.ProgramRuleActionType.SERVER_SUPPORTED_TYPES;
-
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import javax.annotation.CheckForNull;
 import javax.annotation.Nonnull;
 import lombok.extern.slf4j.Slf4j;
 import org.hisp.dhis.common.UID;
-import org.hisp.dhis.commons.util.DebugUtils;
 import org.hisp.dhis.constant.ConstantService;
 import org.hisp.dhis.feedback.BadRequestException;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.program.ProgramService;
 import org.hisp.dhis.programrule.ProgramRule;
-import org.hisp.dhis.programrule.ProgramRuleService;
 import org.hisp.dhis.programrule.ProgramRuleVariable;
 import org.hisp.dhis.programrule.ProgramRuleVariableService;
 import org.hisp.dhis.rules.api.RuleEngine;
@@ -70,8 +65,6 @@ public class DefaultProgramRuleEngine implements ProgramRuleEngine {
 
   private final ConstantService constantService;
 
-  private final ProgramRuleService programRuleService;
-
   private final SupplementaryDataProvider supplementaryDataProvider;
 
   private final ProgramService programService;
@@ -82,13 +75,11 @@ public class DefaultProgramRuleEngine implements ProgramRuleEngine {
       ProgramRuleEntityMapperService programRuleEntityMapperService,
       ProgramRuleVariableService programRuleVariableService,
       ConstantService constantService,
-      ProgramRuleService programRuleService,
       SupplementaryDataProvider supplementaryDataProvider,
       ProgramService programService) {
     this.programRuleEntityMapperService = programRuleEntityMapperService;
     this.programRuleVariableService = programRuleVariableService;
     this.constantService = constantService;
-    this.programRuleService = programRuleService;
     this.supplementaryDataProvider = supplementaryDataProvider;
     this.programService = programService;
     this.ruleEngine = RuleEngine.getInstance();
@@ -125,63 +116,50 @@ public class DefaultProgramRuleEngine implements ProgramRuleEngine {
   }
 
   @Override
-  public RuleEngineEffects evaluateEnrollmentAndTrackerEvents(
-      @Nonnull RuleEnrollment enrollment,
-      @Nonnull List<RuleEvent> events,
+  public RuleEngineEffects evaluateEnrollmentsAndTrackerEvents(
+      @Nonnull Map<RuleEnrollment, List<RuleEvent>> enrollmentsWithEvents,
       @Nonnull Program program,
-      @Nonnull UserDetails user) {
-    return evaluateEnrollmentAndEvents(enrollment, events, program, user);
+      @Nonnull UserDetails user,
+      @Nonnull Map<String, String> constantMap,
+      @Nonnull List<ProgramRule> rules) {
+    if (enrollmentsWithEvents.isEmpty()) {
+      return RuleEngineEffects.of(Collections.emptyList());
+    }
+    RuleEngineContext context = getRuleEngineContext(program, rules, user, constantMap);
+    List<RuleEffects> allEffects = new ArrayList<>();
+    for (Map.Entry<RuleEnrollment, List<RuleEvent>> entry : enrollmentsWithEvents.entrySet()) {
+      try {
+        allEffects.addAll(ruleEngine.evaluateAll(entry.getKey(), entry.getValue(), context));
+      } catch (Exception e) {
+        log.error("Call to rule-engine failed", e);
+      }
+    }
+    return RuleEngineEffects.of(allEffects);
   }
 
   @Override
   public RuleEngineEffects evaluateSingleEvents(
-      @Nonnull List<RuleEvent> events, @Nonnull Program program, @Nonnull UserDetails user) {
-    return evaluateEnrollmentAndEvents(null, events, program, user);
-  }
-
-  private RuleEngineEffects evaluateEnrollmentAndEvents(
-      @CheckForNull RuleEnrollment enrollment,
       @Nonnull List<RuleEvent> events,
       @Nonnull Program program,
-      @Nonnull UserDetails user) {
-    List<ProgramRule> rules =
-        programRuleService.getProgramRulesByActionTypes(program, SERVER_SUPPORTED_TYPES);
-
-    if (rules.isEmpty()) {
-      return RuleEngineEffects.of(Collections.emptyList());
-    }
-
-    List<RuleEffects> ruleEffects =
-        evaluateProgramRulesForMultipleTrackerObjects(enrollment, program, events, rules, user);
-    return RuleEngineEffects.of(ruleEffects);
-  }
-
-  private List<RuleEffects> evaluateProgramRulesForMultipleTrackerObjects(
-      @CheckForNull RuleEnrollment ruleEnrollment,
-      @Nonnull Program program,
-      @Nonnull List<RuleEvent> ruleEvents,
-      @Nonnull List<ProgramRule> rules,
-      @Nonnull UserDetails user) {
+      @Nonnull UserDetails user,
+      @Nonnull Map<String, String> constantMap,
+      @Nonnull List<ProgramRule> rules) {
+    RuleEngineContext ruleEngineContext = getRuleEngineContext(program, rules, user, constantMap);
     try {
-      RuleEngineContext ruleEngineContext = getRuleEngineContext(program, rules, user);
-      return ruleEngine.evaluateAll(ruleEnrollment, ruleEvents, ruleEngineContext);
+      return RuleEngineEffects.of(ruleEngine.evaluateAll(null, events, ruleEngineContext));
     } catch (Exception e) {
-      log.error(DebugUtils.getStackTrace(e));
-      return Collections.emptyList();
+      log.error("Call to rule-engine failed", e);
+      return RuleEngineEffects.of(List.of());
     }
   }
 
   private RuleEngineContext getRuleEngineContext(
       @Nonnull Program program,
       @Nonnull List<ProgramRule> programRules,
-      @Nonnull UserDetails user) {
+      @Nonnull UserDetails user,
+      @Nonnull Map<String, String> constantMap) {
     List<ProgramRuleVariable> programRuleVariables =
         programRuleVariableService.getProgramRuleVariable(program);
-
-    Map<String, String> constantMap =
-        constantService.getConstantMap().entrySet().stream()
-            .collect(
-                Collectors.toMap(Map.Entry::getKey, v -> Double.toString(v.getValue().getValue())));
 
     RuleSupplementaryData supplementaryData =
         supplementaryDataProvider.getSupplementaryData(programRules, user);
